<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/blue">

    <!-- Heading -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="LIST YOUR SERVICE"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="16dp"/>

    <!-- Name -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name:"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:id="@+id/TextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your service name"
        android:inputType="text"
        android:layout_marginBottom="16dp"/>

    <!-- Price -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Price:"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:id="@+id/TextPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter the price"
        android:inputType="numberDecimal"
        android:layout_marginBottom="16dp"/>

    <!-- Description -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description:"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:id="@+id/TextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter a description of your service"
        android:inputType="textMultiLine"
        android:lines="4"
        android:layout_marginBottom="16dp"/>

    <!-- List Your Service Button -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="List Your Service"
        android:id="@+id/buttonListService"/>

</LinearLayout>
