<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:text="Create Account"
            android:textSize="45dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="28dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:alpha="0.7"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:drawableEnd="@drawable/done_icon" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email Address"
            android:alpha="0.7"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawableEnd="@drawable/done_icon" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:alpha="0.7"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/done_icon" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm Password"
            android:alpha="0.7"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/passwordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/password_icon" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Remember me"
                android:layout_centerVertical="true"
                android:alpha="0.7" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Forgot Password?"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createaccount"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Create Account"
            app:cornerRadius="32dp" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/buttonSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Or sign up using "
            android:layout_gravity="center"
            android:alpha="0.7" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="12dp"
                android:background="@drawable/fb" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="12dp"
                android:background="@drawable/google" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="12dp"
                android:background="@drawable/phone" />

        </LinearLayout>

        <TextView
            android:id="@+id/responseTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/buttonSignUp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="Response:"
            android:textStyle="bold"
            android:textSize="16sp" />

    </LinearLayout>
</RelativeLayout>
