<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="300dp"
        android:layout_height="280dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:src="@drawable/servicehub" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo_image"
        android:layout_marginTop="16dp"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:drawableEnd="@drawable/done_icon" />

    <EditText
        android:id="@+id/passwordlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="16dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/password_icon" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordlogin"
        android:layout_marginTop="24dp"
        android:text="Login" />

</RelativeLayout>
