<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to Our Tutoring Service"
        android:textSize="18sp"
        android:textColor="#3d3dcd"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Become a Tutor"
        android:textSize="24sp"
        android:textColor="#673AB7"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="#D1C4E9">

        <EditText
            android:id="@+id/editTextTutorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Your Name"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColorHint="#673AB7"
            android:textColor="#000000"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewQualifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="#D1C4E9">

        <EditText
            android:id="@+id/editTextTutorSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Qualifications"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColorHint="#673AB7"
            android:textColor="#000000"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="#D1C4E9">

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Description"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColorHint="#673AB7"
            android:textColor="#000000"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="#D1C4E9">

        <EditText
            android:id="@+id/Subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Subject"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColorHint="#673AB7"
            android:textColor="#000000"/>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#FF5722"
        android:text="Submit"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#FF5722"
        android:text="Back"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/responseTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_marginTop="16dp"/>

</LinearLayout>
